Limit height of smart folder view. Fix scrollbar.

--- a/popup.css
+++ b/popup.css
@@ -37,7 +37,10 @@ div {
     background-size: 25px 25px;
 }
 #config_block {
+    max-height: 450px;
+    overflow-y: auto;
     border-top: 1px solid #444;
+    /* Hide config_block until expanded by config_expand_button */
     display: none;
 }
 
